[build-system]
requires = ["setuptools", "wheel"]

[tool.packaging]
dynamic = ["authors", "classifiers", "dependencies"]

[project]
name = "robotframework-Datum"
version = "1.0.9" 
description = "robot framework library that contains a set of functions for working with JSON, PDF and Text.."
readme = "README.rst"
requires-python = ">=3.6"